--- a/demoa/app/src/main/res/layout/activity_main.xml
+++ b/demoa/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.yls.demoa.MainActivity">
 
-    <com.baidu.mapapi.map.MapView
-        android:id="@+id/bmapView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true" />
+        android:layout_height="25dp"
+        android:background="@color/colorPrimary"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_tb"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#00FFFF"
+        android:elevation="4dp"
+        app:logo="@mipmap/ic_launcher"
+        app:navigationIcon="@drawable/back"
+        app:subtitle="天下无双"
+        app:title="捷特">
+    </android.support.v7.widget.Toolbar>
+    <android.support.v7.widget.CardView
+        android:id="@+id/id_cv"
+        style="@style/MyBaseCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:layout_marginTop="38dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.441"
+        app:layout_constraintStart_toStartOf="parent"
+        android:foreground="?android:attr/selectableItemBackground">
+
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="230dp"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/id_img"
+                android:layout_width="wrap_content"
+                android:layout_height="180dp"
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:src="@drawable/tx"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#E8E9EA"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="红红战士"
+                android:textColor="#FF0000"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="10dp"
+        android:backgroundTint="#FFFF00"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/add"
+        app:borderWidth="4dp"
+        app:elevation="8dp"
+        app:fabSize="normal"
+        app:pressedTranslationZ="16dp"
+        app:rippleColor="#FF00FF"/>
 
 </LinearLayout>
